Fixed Navbar z-index bug

--- a/components/Navbar/Navbar.module.css
+++ b/components/Navbar/Navbar.module.css
@@ -9,6 +9,7 @@
     padding: 0 20px 0 20px;
     width: 100%;
     height: var(--navbar-height);
+    z-index: 10;
 }
 
 .navbar__menuLinks {
